v1.2 (2022-1-2)
- Added slideshow background mode
- Added screensaver feature
- Windows: Improved Unicode support

v1.1 (2021-12-24)
- Added logging interface
- Linux: Added OnLaunch setting
- Changed all RGBA color settings to RGB for simplicity. Transparency is now set solely in the separate opacity setting
- Refactored automatic file searching logic

v1.0.1 (2021-12-4)
- Added support for WebP images
- Improved handling of paths enclosed in quotes
- Windows: Added application icon to executable

v1.0 (2021-11-28)
- Initial release