@@ -82,7 +82,9 @@ set(DEFAULT_BACKGROUND_COLOR_R "00")
 set(DEFAULT_BACKGROUND_COLOR_G "00")
 set(DEFAULT_BACKGROUND_COLOR_B "00")
 set(DEFAULT_SLIDESHOW_IMAGE_DURATION "30000")
+set(DEFAULT_SLIDESHOW_IMAGE_DURATION_CONFIG "30")
 set(DEFAULT_SLIDESHOW_TRANSITION_TIME "1500")
+set(DEFAULT_SLIDESHOW_TRANSITION_TIME_CONFIG "1.5")
 set(DEFAULT_ICON_SIZE 256)
 set(DEFAULT_ICON_SPACING "5%")
 set(DEFAULT_FONT "OpenSans-Regular.ttf")
