@@ -7,8 +7,8 @@
 @SETTING_BACKGROUND_COLOR@=@DEFAULT_BACKGROUND_COLOR_R@@DEFAULT_BACKGROUND_COLOR_G@@DEFAULT_BACKGROUND_COLOR_B@
 #@SETTING_BACKGROUND_IMAGE@=
 #@SETTING_SLIDESHOW_DIRECTORY@=
-#@SETTING_SLIDESHOW_IMAGE_DURATION@=@DEFAULT_SLIDESHOW_IMAGE_DURATION@
-#@SETTING_SLIDESHOW_TRANSITION_TIME@=@DEFAULT_SLIDESHOW_TRANSITION_TIME@
+#@SETTING_SLIDESHOW_IMAGE_DURATION@=@DEFAULT_SLIDESHOW_IMAGE_DURATION_CONFIG@
+#@SETTING_SLIDESHOW_TRANSITION_TIME@=@DEFAULT_SLIDESHOW_TRANSITION_TIME_CONFIG@
 @SETTING_ICON_SIZE@=@DEFAULT_ICON_SIZE@
 @SETTING_ICON_SPACING@=@DEFAULT_ICON_SPACING@
 @SETTING_TITLE_FONT@=@FONT_PREFIX@@DEFAULT_FONT@
@@ -35,8 +35,8 @@
 @SETTING_SCREENSAVER_INTENSITY@=@DEFAULT_SCREENSAVER_INTENSITY@
 @SETTING_SCREENSAVER_PAUSE_SLIDESHOW@=@DEFAULT_SCREENSAVER_PAUSE_SLIDESHOW@
 
-#Hotkey1 quits program on Esc press
 [Hotkeys]
+#Esc to quit
 Hotkey1=1B;:quit
 
 [Gamepad]
