@@ -27,7 +27,7 @@
 #define MIN_SLIDESHOW_IMAGE_DURATION 5000
 #define MAX_SLIDESHOW_IMAGE_DURATION 600000
 #define MIN_SLIDESHOW_TRANSITION_TIME 0
-#define MAX_SLIDESHOW_TRANSITION_TIME 3000
+#define MAX_SLIDESHOW_TRANSITION_TIME 3000000
 #define MIN_SCREENSAVER_IDLE_TIME 3
 #define MAX_SCREENSAVER_IDLE_TIME 900
 #define SCREENSAVER_TRANSITION_TIME 1500
